<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:id="@+id/action_settings"-->
          <!--android:title="@string/action_settings"-->
          <!--android:orderInCategory="100"-->
          <!--app:showAsAction="never"/>-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signIn"
            android:title="@string/signin"
            android:orderInCategory="1"
            android:icon="@drawable/ic_action_profile"
            app:showAsAction="ifRoom"
            android:visible="true"/>
        <item
                android:id="@+id/nav_signUp"
                android:title="@string/signup"
                android:orderInCategory="2"
                android:icon="@drawable/ic_action_profile"
                app:showAsAction="never"
                android:visible="true"/>
        <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                android:icon="@drawable/ic_action_profile"
                app:showAsAction="never"
                android:orderInCategory="5"
                android:visible="true"/>

    </group>


</menu>
